comment styles and html

--- a/index.html
+++ b/index.html
@@ -48,20 +48,25 @@
             >
           </li>
         </ul>
+        <button type="button" class="mobile-menu-open">
+          <svg class="mobile-menu-open__icon" width="32" height="32">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
       <!--hero-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!--advantages-->
-      <section class="advantages">
+      <!-- <section class="advantages">
         <div class="container">
           <h2 class="advantages-title">our advantages</h2>
           <ul class="advantages-list list">
@@ -95,10 +100,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--img list-->
-      <section class="img">
+      <!-- <section class="img">
         <div class="container">
           <h2 class="img-title">What are we doing</h2>
           <ul class="img-list list">
@@ -128,9 +133,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--team-->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -304,9 +309,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Customers-->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -354,12 +359,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--/Customers-->
     </main>
     <!--footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div>
           <a class="logo link" href="./index.html">
@@ -415,9 +420,9 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
     <!--OVERLAY-->
-    <div class="overlay is-hidden" data-modal>
+    <!-- <div class="overlay is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="close-icon" width="8" height="8">
@@ -492,8 +497,8 @@
           <button type="submit" class="form-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <!--SCRIPT-->
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
