--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
 
   <body>
     <!--header-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container main-nav">
         <nav class="nav">
           <a class="logo link" href="./index.html">
@@ -48,14 +51,9 @@
             >
           </li>
         </ul>
-        <button type="button" class="mobile-menu-open">
-          <svg class="mobile-menu-open__icon" width="32" height="32">
-            <use href="./images/icons.svg#icon-burger"></use>
-          </svg>
-        </button>
       </div>
     </header>
-    <main>
+    <main> -->
       <!--hero-->
       <!-- <section class="hero">
         <div class="container">
@@ -66,7 +64,7 @@
         </div>
       </section> -->
       <!--advantages-->
-      <!-- <section class="advantages">
+      <section class="advantages">
         <div class="container">
           <h2 class="advantages-title">our advantages</h2>
           <ul class="advantages-list list">
@@ -100,7 +98,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--img list-->
       <!-- <section class="img">
@@ -135,7 +133,7 @@
         </div>
       </section> -->
       <!--team-->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
@@ -309,9 +307,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Customers-->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
@@ -359,7 +357,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--/Customers-->
     </main>
@@ -499,6 +497,6 @@
       </div>
     </div> -->
     <!--SCRIPT-->
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
