--- a/index.html
+++ b/index.html
@@ -369,45 +369,47 @@
     <!--footer-->
     <footer class="footer">
       <div class="container">
-        <div>
-          <a class="logo link" href="./index.html">
-            <span class="footer-web">web</span
-            ><span class="footer-studio">studio</span>
-          </a>
+        <div class="footer-block-top">
+          <div class="footer-block-logo">
+            <a class="logo link" href="./index.html">
+              <span class="footer-web">web</span
+              ><span class="footer-studio">studio</span>
+            </a>
 
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-media">
-          <h2 class="media-title">Social media</h2>
-          <ul class="media-list list">
-            <li class="media-item">
-              <a href="" class="media-link">
-                <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use></svg
-              ></a>
-            </li>
-            <li class="media-item">
-              <a href="" class="media-link">
-                <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use></svg
-              ></a>
-            </li>
-            <li class="media-item">
-              <a href="" class="media-link">
-                <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use></svg
-              ></a>
-            </li>
-            <li class="media-item">
-              <a href="" class="media-link">
-                <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use></svg
-              ></a>
-            </li>
-          </ul>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-media">
+            <h2 class="media-title">Social media</h2>
+            <ul class="media-list list">
+              <li class="media-item">
+                <a href="" class="media-link">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use></svg
+                ></a>
+              </li>
+              <li class="media-item">
+                <a href="" class="media-link">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg
+                ></a>
+              </li>
+              <li class="media-item">
+                <a href="" class="media-link">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="media-item">
+                <a href="" class="media-link">
+                  <svg class="media-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
         <form class="footer-form">
           <label for="email-footer" class="footer-email-label">Subscribe</label>
