--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 class="picture"
                 src="./images/imac.jpg"
                 alt="imac image"
+                srcset="./images/imac.jpg 1x, ./images/imac@2x.jpg 2x"
                 width="360"
               />
             </li>
@@ -122,6 +123,7 @@
               <img
                 class="picture"
                 src="./images/iphone.jpg"
+                srcset="./images/iphone.jpg 1x, ./images/iphone@2x.jpg 2x"
                 alt="iphone image"
                 width="360"
               />
@@ -130,6 +132,10 @@
               <img
                 class="picture"
                 src="./images/imac_and_iphone.jpg"
+                srcset="
+                  ./images/imac_and_iphone.jpg    1x,
+                  ./images/imac_and_iphone@2x.jpg 2x
+                "
                 alt="imac and iphone image"
                 width="360"
               />
@@ -146,6 +152,10 @@
               <img
                 class="picture"
                 src="./images/mark_guerrero.jpg"
+                srcset="
+                  ./images/mark_guerrero.jpg    1x,
+                  ./images/mark_guerrero@2x.jpg 2x
+                "
                 alt="Mark Guerrero"
                 width="264"
               />
@@ -188,6 +198,7 @@
               <img
                 class="picture"
                 src="./images/tom_ford.jpg"
+                srcset="./images/tom_ford.jpg 1x, ./images/tom_ford@2x.jpg 2x"
                 alt="Tom Ford"
                 width="264"
               />
@@ -230,6 +241,10 @@
               <img
                 class="picture"
                 src="./images/camila_garcia.jpg"
+                srcset="
+                  ./images/camila_garcia.jpg    1x,
+                  ./images/camila_garcia@2x.jpg 2x
+                "
                 alt="Camila Garcia"
                 width="264"
               />
@@ -272,6 +287,10 @@
               <img
                 class="picture"
                 src="./images/daniel_wilson.jpg"
+                srcset="
+                  ./images/daniel_wilson.jpg    1x,
+                  ./images/daniel_wilson@2x.jpg 2x
+                "
                 alt="Daniel Wilson"
                 width="264"
               />
