--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
       </div>
     </footer>
     <!--OVERLAY-->
-    <!-- <div class="overlay is-hidden" data-modal>
+    <div class="overlay is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="close-icon" width="8" height="8">
@@ -521,7 +521,7 @@
           <button type="submit" class="form-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <div class="mob-menu is-hidden" data-menu>
       <div class="menu-container">
         <div class="mob-menu-top">
