--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
         <button type="button" class="menu-btn-open" data-menu-open>
           <svg class="menu-btn-icon" width="32" height="32">
-            <use href="/./images/icons.svg#icon-burger"></use>
+            <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
@@ -526,7 +526,7 @@
         <div class="mob-menu-top">
           <button type="button" class="menu-btn-close" data-menu-close>
             <svg class="menu-btn-icon" width="8" height="8">
-              <use href="/./images/icons.svg#icon-close"></use>
+              <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
           <ul class="menu list">
